--- a/COFFEE-BLOG/aboutUs.html
+++ b/COFFEE-BLOG/aboutUs.html
@@ -31,12 +31,6 @@
                 </nav> <!--nav-->
             </div><!--bar-->
         </div>
-
-        <!-- <div class="header__textAboutUs">
-            <h2 class="no-margin">Coffee blog with tips and courses</h2>
-            <p class="no-margin">Learn from the experts with the best recipes and tips</p>
-        </div>header__text -->
-
     </header ><!--header-->
 
         <main class="container">
@@ -66,8 +60,8 @@
 
     <footer class="footer">
         <div class="container">
-            <p>Laura Patricia Cruz | Front End Developer</p>
-            <p>All Rights Reserved</p>
+            <p>Laura Patricia Cruz </p>
+            <p>Front End Developer</p>         
         </div>
     </footer>
     <script src="js/modernizr.js"></script>
