--- a/COFFEE-BLOG/contact.html
+++ b/COFFEE-BLOG/contact.html
@@ -57,7 +57,7 @@
                     <label class="field__label" for="message">Message</label>
                     <textarea class="field__field fiel__field--textarea" name="" id="message" cols="30" rows="10"></textarea>
                 </div>
-                <div class="field">
+                <div class="field__Button">
                     <input type="submit" value="Send" class="button button--primary">
                 </div>
             </form>
@@ -65,8 +65,9 @@
 
     <footer class="footer">
         <div class="container">
-            <p>Laura Patricia Cruz | Front End Developer</p>
-            <p>All Rights Reserved</p>
+            <p>Laura Patricia Cruz </p>
+            <p>Front End Developer</p>
+            
         </div>
     </footer>
     <script src="js/modernizr.js"></script>
