--- a/COFFEE-BLOG/thirdArticle.html
+++ b/COFFEE-BLOG/thirdArticle.html
@@ -86,8 +86,8 @@ Another study by Johns Hopkins University indicated that caffeine may enhance lo
 
         <footer class="footer">
         <div class="container">
-            <p>Laura Patricia Cruz | Front End Developer</p>
-            <p>All Rights Reserved</p>
+            <p>Laura Patricia Cruz </p>
+            <p>Front End Developer</p>
         </div>
     </footer>
     <script src="js/modernizr.js"></script>
