--- a/COFFEE-BLOG/firstArticle.html
+++ b/COFFEE-BLOG/firstArticle.html
@@ -102,8 +102,8 @@
         
     <footer class="footer">
         <div class="container">
-            <p>Laura Patricia Cruz | Front End Developer</p>
-            <p>All Rights Reserved</p>
+            <p>Laura Patricia Cruz </p>
+            <p>Front End Developer</p>
         </div>
     </footer>
     <script src="js/modernizr.js"></script>
