--- a/COFFEE-BLOG/index.html
+++ b/COFFEE-BLOG/index.html
@@ -35,8 +35,8 @@
 
                 <nav class="nav">
                     <a href="aboutUs.html" class="nav__link">About Us</a>
-                    <a href="courses.html" class="nav__link nav__link--courses">Courses</a>
-                    <a href="contact.html" class="nav__link nav__link--contact">Conctact</a>
+                    <a href="courses.html" class="nav__link">Courses</a>
+                    <a href="contact.html" class="nav__link">Conctact</a>
                 </nav> <!--nav-->
             </div><!--bar-->
         </div>
