update images border radius and js to contact

--- a/COFFEE-BLOG/contact.html
+++ b/COFFEE-BLOG/contact.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="field">
                     <label class="field__label" for="message">Message</label>
-                    <textarea class="field__field fiel__field--textarea" name="" id="message" cols="30" rows="10"></textarea>
+                    <textarea class="field__field field__field--textarea" name="" id="message" cols="30" rows="10"></textarea>
                 </div>
                 <div class="field__Button">
                     <input type="submit" value="Send" class="button button--primary">
@@ -70,6 +70,8 @@
             
         </div>
     </footer>
+
     <script src="js/modernizr.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
