--- a/COFFEE-BLOG/index.html
+++ b/COFFEE-BLOG/index.html
@@ -11,7 +11,7 @@
     <title>Document</title>
     <meta name="description" content="Página Web de Blog de Café"
     
-    <!--PREFEFCH-->
+    <!--PREFETCH-->
     <link rel="prefetch" href="courses.html" as="document" >
     <!--PRELOAD-->
     <link rel="preload" href="css/normalize.css" as="style">
