--- a/COFFEE-BLOG/aboutUs.html
+++ b/COFFEE-BLOG/aboutUs.html
@@ -31,6 +31,11 @@
                 </nav> <!--nav-->
             </div><!--bar-->
         </div>
+        
+        <div class="header__text">
+            <h2 class="no-margin">Coffee blog with tips and courses</h2>
+            <p class="no-margin">Learn from the experts with the best recipes and tips</p>
+        </div><!--header__text-->
     </header ><!--header-->
 
         <main class="container">
