--- a/COFFEE-BLOG/index.html
+++ b/COFFEE-BLOG/index.html
@@ -27,7 +27,7 @@
 <body>
 
     <header class="header">
-        <div clas="container">
+        <div class="container">
             <div class="bar">
                 <a class="logo"  href="index.html">
                     <h1 class="logo__name no-margin center-text">Coffee<span class="logo__bold">Blog</span></h1>
